testsuite/poke.pkl/funcall-def-diag-7.pk
/* { dg-do compile } */

fun foo = (string a, int b = a) void: {} /* { dg-error ".*\n.*" } */
